--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Space+Mono:wght@700&display=swap');
+
 *, ::before, ::after {
     padding: 0;
     margin: 0;
@@ -8,8 +10,19 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-direction: column;
     min-height: 100vh;
     background-color: #161616;
+}
+
+h1 {
+    margin-bottom: 2rem;
+    color: #fff;
+    font-family: 'Space Mono', monospace;
+    text-transform: uppercase;
+    font-size: 3rem;
+    margin: 0 auto;
+    font-weight: 700;
 }
 img {
     width: 100%; 
